<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/actionModeSplitBackground"
                android:orientation="horizontal"
                android:visibility="visible" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/volume"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layerType="software"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="Tryb"
                        android:textAlignment="center"
                        android:textSize="22sp" />

                    <CheckBox
                        android:id="@+id/checkNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:checked="false"
                        android:text="@string/normalMode"
                        android:textColor="@color/fontColor" />

                    <CheckBox
                        android:id="@+id/checkSilent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:checked="false"
                        android:text="@string/silent_mode"
                        android:textColor="@color/fontColor" />

                    <CheckBox
                        android:id="@+id/checkVibra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:checked="false"
                        android:text="@string/vibration_mode"
                        android:textColor="@color/fontColor" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="Głośność dźwięków"
                        android:textAlignment="center"
                        android:textSize="22sp" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="4"
                            android:text="Dzwonek" />

                        <TextView
                            android:id="@+id/textVolumePercent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="2"
                            android:text="3 / 7" />
                    </TableRow>

                    <SeekBar
                        android:id="@+id/seekVolume"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:max="7"
                        android:progress="3" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="Powiadomienia" />

                    <SeekBar
                        android:id="@+id/seekBar2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:max="7"
                        android:progress="3" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="Systemowe" />

                    <SeekBar
                        android:id="@+id/seekBar3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:max="7"
                        android:progress="3" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="Media" />

                    <SeekBar
                        android:id="@+id/seekBar4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:max="7"
                        android:progress="3" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TimePicker
                        android:id="@+id/timePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:timePickerMode="spinner" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <CheckBox
                            android:id="@+id/checkMonday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/monday"
                            android:textColor="@color/fontColor" />

                        <CheckBox
                            android:id="@+id/checkTuesday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tuesday"
                            android:textColor="@color/fontColor" />

                        <CheckBox
                            android:id="@+id/checkWednesday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wednesday"
                            android:textColor="@color/fontColor" />

                        <CheckBox
                            android:id="@+id/checkThursday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thursday"
                            android:textColor="@color/fontColor" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <CheckBox
                            android:id="@+id/checkFriday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/friday"
                            android:textColor="@color/fontColor" />

                        <CheckBox
                            android:id="@+id/checkSaturday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/saturday"
                            android:textColor="@color/fontColor" />

                        <CheckBox
                            android:id="@+id/checkSunday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunday"
                            android:textColor="@color/fontColor" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <Button
                            android:id="@+id/buttonAccept"
                            android:layout_width="75dp"
                            android:layout_height="75dp"

                            android:layout_marginTop="10dp"
                            android:background="@drawable/volume_change_buttonshape"
                            android:shadowColor="#A8A8A8"
                            android:shadowDx="0"
                            android:shadowDy="0"
                            android:shadowRadius="13"
                            android:text="@string/add"
                            android:textColor="#FFFFFF"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="                            " />

                        <Button
                            android:id="@+id/buttonDelete"
                            android:layout_width="75dp"
                            android:layout_height="75dp"

                            android:layout_marginTop="10dp"
                            android:background="@drawable/volume_change_buttonshape"
                            android:shadowColor="#A8A8A8"
                            android:shadowDx="0"
                            android:shadowDy="0"
                            android:shadowRadius="13"
                            android:text="@string/delete"
                            android:textColor="#FFFFFF"
                            android:textSize="12sp" />

                    </TableRow>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </TabHost>
</LinearLayout>